<resources>
    <string name="primaryColor">#E40046</string>
    <string name="apiKey">ck_ab25e0a679e9c13700132bf4cba4b5055513ff6c</string>
    <string name="apiSecret">cs_75f253b398912c3e6f10cff1fb3ee570dc7bbd27</string>
    <string name="right_arrow">{entypo-chevron-small-right}</string>
    <string name="empty_image">http://bit.ly/2FxkuxQ</string>

    //enter email address dialog
    <string name="please_provide_email_address">Please provide your email address for the confirmation before you place the order. </string>
    <string name="txt_continue">Continue</string>
    <string name="enter_email">Enter Email Address</string>

    //mbsh categories
    <string name="mind">Mind</string>
    <string name="body">Body</string>
    <string name="heart">Heart</string>
    <string name="soul">Soul</string>

    <string name="connectToFacebook">{icon-social-facebook @color/colorAccent2} &#160; &#160;&#160; &#160;&#160; &#160; Stay Connected With Us</string>

    //bhumis
    <string name="bhumis_app_name">Bhumi\'s</string>


    //check out
    <string name="order_from_app"><html><b>&#160; ( Ordered from Android App )</b></html></string>
    <string name="quotation_from_app"><html><b>&#160; ( Quotation from Android App )</b></html></string>
    <string name="checkout">Checkout</string>
    <string name="ok">OK</string>
    <string name="will_be_contacted">will be contacted</string>
    <string name="order_received">Orders Received</string>
    <string name="checkout_success_msg">Dear customer, your orders have been received successfully. Thank you for shopping with us. \n Happy Shopping! </string>
    <string name="shipping_address">Shipping Address</string>

    //sign up
    <string name="hint_first_name">First Name*</string>
    <string name="hint_last_name">Last Name*</string>
    <string name="hint_re_password">Re-enter your Password*</string>
    <string name="hint_mobile_no">Mobile Number (for order updates)</string>
    <string name="create_account">Create Account</string>
    <string name="already_account">Already have an account?</string>
    <string name="here">here</string>

    //login
    <string name="login_info">Log in to get a personalized experience &amp; quick checkout</string>
    <string name="continue_with">- continue with -</string>
    <string name="or_use">or use email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_PasalX">New to PasalX?</string>
    <string name="sign_up">Sign Up</string>
    <string name="now">now</string>
    <string name="fb">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="skip">skip</string>
    <string name="log_in">Log In</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_user">Enter Username</string>
    <string name="hint_password">Enter Password</string>

    //profile
    <string name="log_out">{fa-sign-out} &#160;LOG OUT</string>

    //password details
    <string name="save_details">Save Details</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email*</string>
    <string name="location">Location</string>
    <string name="mblNo">Mobile Number</string>

    //change_password
    <string name="old_password">Old Password*</string>
    <string name="hint_old_pw">Enter current password</string>
    <string name="new_password">New Password*</string>
    <string name="hint_new_pw">Enter new password</string>
    <string name="confirm_password">Confirm New Password*</string>
    <string name="hint_confirm_new_pw">Re-type new password</string>
    <string name="change_password">Change Password</string>

    //navigation drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="my_orders">{fa-gift} &#160;My Orders</string>
    <string name="settings">Settings</string>
    <string name="txt_login">Log In</string>
    <string name="please_login">Please log in to see your orders.</string>
    <string name="txt_signup">Sign Up</string>
    <string name="nav_profile_txt">{icon-user}</string>
    <string name="nav_category_txt">Category</string>

    //category icon textview
    <string name="category_icontextview">{fa-shopping-bag}</string>
    <string name="category_arrowicontextview">{fa-angle-down}</string>

    //user home
    <string name="category_name">Categories</string>
    <string name="search_hint">Search</string>

    //Add shipping fragment
    <string name="payment_method">Our Payment Methods:</string>
    <string name="cash_on_delivery">Cash On Delivery inside Damak valley only.</string>
    <string name="add_new_address">Add New Address</string>
    <string name="pin_code">Pin Code*</string>
    <string name="city">City*</string>
    <string name="next">Next</string>
    <string name="region">Region*</string>
    <string name="address_one">First line of address*</string>
    <string name="address_two">Second line of address</string>
    <string name="address_three">Third line of address</string>
    <string name="phone_no">Phone no*</string>
    <string name="proceed_further">Login to proceed further</string>
    <string name="check_out_now">Checkout Now</string>

    //progress and error text
    <string name="product_empty">&#160;&#160;&#160;&#160;&#160;&#160;OOPS! \nProducts will be added soon!</string>
    <string name="progress_txt">Progress</string>
    <string name="nothing_to_show">Nothing To show :(</string>

    //wishlist activity
    <string name="fragment_wishlist">Wishlist Items</string>
    <string name="move_to_cart">Move To Cart</string>

    //Orders fragment
    <string name="order_no">Order No :&#160;</string>
    <string name="order_id">&#160; 1070544-2712264-56344501</string>
    <string name="bought_this_for">Bought this product for:</string>
    <string name="orderedItems">Ordered Items</string>
    <string name="others">Others</string>
    <string name="viewProducts"><u>View Items</u></string>
    <string name="order_status">Ordered</string>
    <string name="user_name">Aditya</string>
    <string name="quantity_no">&#160;2</string>
    <string name="size_no">&#160;28</string>
    <string name="txtSize">Size: &#160;</string>
    <string name="txtQty">Qty: &#160;</string>

    //notification fragment
    <string name="nfTitle">Flat 300 OFF just for You!</string>
    <string name="nfDesc">Enjoy Free delivery | EMI | Easy Exchange</string>
    <string name="nf_time">8 hours ago</string>
    <string name="nf_icon">{fa-bell 30px}</string>

    //Fragment Products
    <string name="sort">{fa-long-arrow-up}{fa-long-arrow-down} &#160;SORT</string>
    <string name="filter">{fa-filter} &#160;FILTER</string>

    //Fragment ProductFullDetails
    <string name="save">{fa-bookmark} &#160;SAVE</string>
    <string name="buy_now">{fa-bookmark} &#160;BUY NOW</string>
    <string name="cart">{md-local-grocery-store} &#160;ADD TO CART</string>
    <string name="addedToCart">{md-local-grocery-store} &#160;ADDED TO CART</string>
    <string name="myOrders">{fa-gift @color/colorAccent} &#160; &#160;&#160; &#160; &#160; &#160;My Orders</string>
    <string name="addedToQuote">{md-local-grocery-store} &#160;ADDED TO QUOTE</string>
    <string name="favourite">{fa-heart} &#160;Add To Favourites</string>
    <string name="share">{fa-share} &#160;Share</string>
    <string name="wishlist">{fa-gift} &#160;Add To Wishlist</string>
    <string name="addedToWishlist">{fa-gift} &#160;Added To Wishlist</string>
    <string name="description">Product Details:</string>
    <string name="txtDescription">Beautiful chiffon Saree</string>
    <string name="availability">Availability Status:</string>
    <string name="ratings">Ratings:</string>
    <string name="info">+ Info</string>
    <string name="specifications">Specifications:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="txtRatings">4</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out Of Stock</string>

    //single product layout
    <string name="item_name">Denim Jacket</string>
    <string name="price_tag">{icon-tag}</string>
    <string name="rs_txt">Rs.&#160;</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="txt_off"> \u002810% Off\u0029</string>
    <string name="original_price">1000</string>
    <string name="discount_offer">10</string>
    <string name="item_price">100</string>
    <string name="item_category">Clothing</string>

    //product size
    <string name="txt_size">Size</string>
    <string name="size_small">S</string>
    <string name="size_medium">M</string>
    <string name="size_large">L</string>
    <string name="size_extra_large">XL</string>
    <string name="extra_extra_large">XXL</string>

    //toolbar and menu items title
    <string name="add_to_cart">Cart</string>
    <string name="quotation">Quotations</string>
    <string name="search_icon">Search</string>
    <string name="favourites">Favourites</string>
    <string name="notification_icon">Notifications</string>
    <string name="call_icon">Call</string>

    //cart items
    <string name="change_quantity">Change Quantity</string>
    <string name="shop_name">Gossip Queen</string>
    <string name="others_added_cart">is in 50+ carts right now</string>
    <string name="product_name">Nike Men Black Run All Day Running Shoes</string>
    <string name="sold_by">Sold by:</string>
    <string name="size">Size:&#160;</string>
    <string name="txtPrice">Price</string>
    <string name="no_of_items">2</string>
    <string name="txtDelivery">Delivery</string>
    <string name="txtPayableAmount">Total Payable</string>
    <string name="quantity">Quantity:</string>
    <string name="spinnerIcon">{fa-sort-down}</string>
    <string name="discounted_price">Rs.249</string>
    <string name="remove">{md-delete}&#160; Remove From Cart</string>
    <string name="move_to_wishlist">{fa-gift} &#160;WISHLIST</string>
    <string name="change_qty">Change Quantity</string>
    <string name="view_details">View Details</string>
    <string name="price_details">Price Details</string>
    <string name="place_order">Place your Order</string>
    <string-array name="tee_size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>
    <string-array name="product_quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>More</item>
    </string-array>

    <string name="about_us">About Us</string>

    //orders successful
    <string name="orders_success">Your orders have been successfully received!</string>
    <string name="quotation_success">Your quotations have been successfully received!</string>

    //contact info
    <string name="phone">+9779851043396</string>
    <string name="viber">+9779851043396</string>
    <string name="whatsApp">+9779851043396</string>
    <string name="insta">https://www.instagram.com/aamababaonline/</string>
    <string name="twitter">https://www.twitter.com/aamababaonline/</string>
    <string name="messenger">aamababaonline</string>
    <string name="facebook">https://www.facebook.com/aamababaonline/</string>

</resources>
