<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/user_app_bar_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding"
            android:layout_marginLeft="2dp"
            android:text="@string/old_password"
            android:textSize="@dimen/small_txt_size"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/old_pw_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_pw_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/change_pw_et_box"
            android:hint="@string/hint_old_pw"
            android:inputType="textWebPassword"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/secondaryText"
            android:textColorHint="@color/secondaryText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding"
            android:layout_marginLeft="2dp"
            android:text="@string/new_password"
            android:textSize="@dimen/small_txt_size"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/new_pw_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_pw_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/change_pw_et_box"
            android:hint="@string/hint_new_pw"
            android:inputType="textWebPassword"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/secondaryText"
            android:textColorHint="@color/secondaryText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding"
            android:layout_marginLeft="2dp"
            android:text="@string/confirm_password"
            android:textSize="@dimen/small_txt_size"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/re_new_pw_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_pw_height"
            android:layout_marginTop="4dp"
            android:background="@drawable/change_pw_et_box"
            android:hint="@string/hint_confirm_new_pw"
            android:inputType="textWebPassword"
            android:paddingLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/secondaryText"
            android:textColorHint="@color/secondaryText"
            android:textSize="12sp" />

        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:layout_marginTop="@dimen/extra_large_padding"
            android:background="@drawable/signup_button"
            android:text="@string/change_password"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
