<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textStyle="bold"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/denim_jacket" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_tag"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_txt"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="1"
            android:maxLines="3"
            android:scrollHorizontally="true"
            android:text="@string/item_category"
            android:textSize="12.5dp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>