<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fullNamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondaryText"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@id/password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/small_txt_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_margin_top">

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_top"
            android:backgroundTint="@color/secondaryText"
            android:hint="@string/gender"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@id/password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/small_txt_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mbl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_margin_top">

        <EditText
            android:id="@+id/mobileNO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_top"
            android:backgroundTint="@color/secondaryText"
            android:hint="@string/mblNo"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusForward="@id/password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/small_txt_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_margin_top">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_top"
            android:backgroundTint="@color/secondaryText"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/small_txt_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_margin_top">

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_top"
            android:backgroundTint="@color/secondaryText"
            android:hint="@string/location"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:nextFocusForward="@id/password"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/small_txt_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/changePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_btn"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@drawable/change_pw_button"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textColor="@color/change_password_btn"
        android:textSize="11sp"
        android:textStyle="bold"
        android:elevation="4dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/saveDetails"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@drawable/login_button"
        android:text="@string/save_details"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:elevation="8dp"/>

</LinearLayout>
