<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/layout_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/top_curve"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/proceed_further"
        android:fontFamily="@font/whitney_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginLeft="@dimen/large_padding"
            android:layout_marginRight="@dimen/large_padding"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="@dimen/my_btn"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/socialmedia_button"
                android:gravity="center"
                android:text="@string/fb"
                android:textSize="@dimen/small_txt_size" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="@dimen/my_btn"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/socialmedia_button"
                android:gravity="center"
                android:text="@string/google"
                android:textSize="@dimen/small_txt_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_btn"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_below="@id/topLayout"
                android:layout_weight="1"
                android:background="@color/horizontalLine" />\

            <TextView
                android:id="@+id/horizontalLine"
                android:layout_width="0dp"
                android:layout_height="@dimen/my_btn"
                android:layout_below="@id/topLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or_use"
                android:fontFamily="@font/whitney_light"
                android:textSize="@dimen/small_txt_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_below="@id/topLayout"
                android:layout_weight="1"
                android:background="@color/horizontalLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryPink"
                android:textSize="@dimen/general_text_size"
                android:textStyle="bold" />

            <View
                android:id="@id/verticalLine"
                android:layout_width="0.8dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="3dp"
                android:background="@color/colorGrey" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryPink"
                android:textSize="@dimen/general_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>