<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/user_app_bar_main"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/layout_padding"
                android:scaleType="centerInside"
                android:src="@drawable/ic_email" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/whitney_light"
                android:gravity="center_horizontal"
                android:text="@string/please_provide_email_address"
                android:textColor="@color/colorPrimaryPink"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/enter_email_address_height"
                android:layout_marginTop="@dimen/extra_large_padding"
                android:background="@drawable/change_pw_et_box"
                android:elevation="2dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:textColor="@color/secondaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="12sp" />

            <Button
                android:id="@+id/continur_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/extra_large_padding"
                android:background="@drawable/signup_button"
                android:elevation="3dp"
                android:text="@string/txt_continue"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
